--- a/GameChanger Projekt - El Ti/wwwroot/Kontakt.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Kontakt.html
@@ -35,24 +35,28 @@
 
     <br />
 
-    <div class="header" id="frontHeader">
+    <!-- Navigation Bar put here to be loaded last and in front! -->
+    <div class="header; sticky" id="frontHeader">
 
         <div class="topnav" style="text-align: center">
             <a href="http://localhost:55716/">Forside</a>
             <a href="Spil.html">Spil</a>
             <a href="Kontakt.html">Kontakt</a>
         </div>
+
+
     </div>
+
     <div class="SocialBox">
         <div class="ContactHeader">
             <table>
                 <thead>
                     <tr>
                         <th>
-                            <img src="Gamechanger billedmateriale/Grafik/icon_titlebar.png" height="20px" width="16px" style="padding-bottom:6px"/>
+                            <img src="Gamechanger billedmateriale/Grafik/icon_titlebar.png" height="20px" width="16px" style="padding-bottom:6px" />
                         </th>
                         <th>
-                            <h3 style="padding-top:6px; padding-left:3px" >
+                            <h3 style="padding-top:6px; padding-left:3px">
                                 Kontakt
                             </h3>
                         </th>
@@ -67,8 +71,8 @@
                     <th width="30%" id="message">
                         <p>Fulde Navn</p>
                     </th>
-                    <th >
-                        <input type="text" id="FName"/>
+                    <th>
+                        <input type="text" id="FName" />
                     </th>
                 </tr>
                 <tr>
@@ -79,8 +83,8 @@
                         <input type="text" id="email" />
                     </th>
                 </tr>
-                <tr >
-                    <th id="message" >
+                <tr>
+                    <th id="message">
                         <p>Besked</p>
                     </th>
                     <th>
@@ -91,7 +95,7 @@
                 <tr>
                     <th></th>
                     <th>
-                        <button id="KontaktButton" class="AquaButton" >
+                        <button id="KontaktButton" class="AquaButton">
                             Send
                         </button>
                     </th>
