--- a/GameChanger Projekt - El Ti/wwwroot/Spil.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Spil.html
@@ -71,12 +71,12 @@
                         <table class="table">
                             <tr style="padding-left:0">
                                 <td style="padding-bottom: 0%">
-                                    <a href="/Andmeldelser/SplinterCellBlacklist.html">
+                                    <a href="/Anmeldelser/SplinterCellBlacklist.html">
                                         <img src="../Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" height="60%" width="100%" />
                                     </a>
                                 </td>
                                 <td style="padding-left:0;padding-bottom: 0%">
-                                    <a href="/Andmeldelser/SplinterCellBlacklist.html">
+                                    <a href="/Anmeldelser/SplinterCellBlacklist.html">
                                         <h3 id="GameTitle"><b>Splinter Cell: Blacklist</b></h3>
                                     </a>
                                     <p id="GameInfo">Udgiver: <u>Ubisoft</u> | Genre: Stealth</p>
@@ -89,13 +89,13 @@
                         <table class="table" id="Seperator">
                             <tr style="padding-left:0">
                                 <td>
-                                    <a href="Andmeldelser/gtav.html">
+                                    <a href="Anmeldelser/gtav.html">
                                         <img src="Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" height="60%" width="100%" />
                                     </a>
 
                                 </td>
                                 <td style="padding-left:0">
-                                    <a href="Andmeldelser/gtav.html">
+                                    <a href="Anmeldelser/gtav.html">
                                         <h3 id="GameTitle"><b>Grand Theft Auto V</b></h3>
                                     </a>
                                     <p id="GameInfo">Udgiver: <u>Rockstar Games</u> | Genre: Action-adventure</p>
@@ -106,12 +106,12 @@
                         <table class="table">
                             <tr style="padding-left:0">
                                 <td>
-                                    <a href="Andmeldelser/Titanfall.html">
+                                    <a href="Anmeldelser/Titanfall.html">
                                         <img src="Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" height="60%" width="100%" />
                                     </a>
                                 </td>
                                 <td style="padding-left:0">
-                                    <a href="Andmeldelser/Titanfall.html">
+                                    <a href="Anmeldelser/Titanfall.html">
                                         <h3 id="GameTitle" href="Andmeldelser/Titanfall.html"><b>Titanfall</b></h3>
                                     </a>
                                     <p id="GameInfo">Udgiver: <u>Respawn Entertainment</u> | Genre: Action, Skydespil</p>
@@ -122,12 +122,12 @@
                         <table class="table" id="Seperator">
                             <tr style="padding-left:0">
                                 <td>
-                                    <a href="/Andmeldelser/Thombraider2013.html">
+                                    <a href="/Anmeldelser/Thombraider2013.html">
                                         <img src="Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" height="60%" width="100%" />
                                     </a>
                                 </td>
                                 <td style="padding-left:0">
-                                    <a href="/Andmeldelser/Thombraider2013.html">
+                                    <a href="/Anmeldelser/Thombraider2013.html">
                                         <h3 id="GameTitle"><b>Tomb Raider 2013</b></h3>
                                     </a>
                                     <p id="GameInfo">Udgiver: <u>Square Enix</u> | Genre: Action-adventure</p>
@@ -138,12 +138,12 @@
                         <table class="table">
                             <tr style="padding-left:0">
                                 <td>
-                                    <a href="/Andmeldelser/Halo4.html">
+                                    <a href="/Anmeldelser/Halo4.html">
                                         <img src="Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" height="60%" width="100%" />
                                     </a>
                                 </td>
                                 <td style="padding-left:0">
-                                    <a href="/Andmeldelser/Halo4.html">
+                                    <a href="/Anmeldelser/Halo4.html">
                                         <h3 id="GameTitle"><b>Halo 4</b></h3>
                                     </a>
                                     <p id="GameInfo">Udgiver: <u>Microsoft Studios</u> | Genre: First-person shooter</p>
@@ -154,12 +154,12 @@
                         <table class="table" id="Seperator">
                             <tr style="padding-left:0">
                                 <td>
-                                    <a href="Andmeldelser/Forza4.html">
+                                    <a href="Anmeldelser/Forza4.html">
                                         <img src="Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" height="60%" width="100%" />
                                     </a>
                                 </td>
                                 <td style="padding-left:0">
-                                    <a href="Andmeldelser/Forza4.html">
+                                    <a href="Anmeldelser/Forza4.html">
                                         <h3 id="GameTitle"><b>Forza 4</b></h3>
                                     </a>
                                     <p id="GameInfo">Udgiver: <u>Microsoft Studios</u> | Genre: Sport</p>
@@ -179,15 +179,15 @@
                         <table style="padding-left: 0%" width="100%">
                             <tr>
                                 <td width="23%">
-                                    <a href="/Andmeldelser/Forza4.html">
+                                    <a href="/Anmeldelser/Forza4.html">
                                         <img src="../Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" height="23%" />
                                     </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
-                                    <a href="/Andmeldelser/Forza4.html">
+                                    <a href="/Anmeldelser/Forza4.html">
                                         <h3 id="GameTitleNyeAnd"><b>Forza 4</b></h3>
                                     </a>
-                                    <p id="AndDesc"> Oprettet 03 Juni 2020</p>
+                                    <p id="AndDesc" style="padding-top:0%"> Oprettet 03 Juni 2020</p>
                                 </td>
                             </tr>
                         </table>
@@ -196,12 +196,12 @@
                         <table id="Seperator" width="100%">
                             <tr>
                                 <td width="23%">
-                                    <a href="/Andmeldelser/SplinterCellBlacklist.html">
+                                    <a href="/Anmeldelser/SplinterCellBlacklist.html">
                                         <img src="../Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" height="23%" />
                                     </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
-                                    <a href="/Andmeldelser/SplinterCellBlacklist.html">
+                                    <a href="/Anmeldelser/SplinterCellBlacklist.html">
                                         <h3 id="GameTitleNyeAnd"><b>Splinter Cell: Blacklist</b></h3>
                                     </a>
                                     <p id="AndDesc"> Oprettet 01 Juni 2020</p>
@@ -212,12 +212,12 @@
                         <table width="100%">
                             <tr>
                                 <td width="23%">
-                                    <a href="/Andmeldelser/Titanfall.html">
+                                    <a href="/Anmeldelser/Titanfall.html">
                                         <img src="../Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" height="23%" />
                                     </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
-                                    <a href="/Andmeldelser/Titanfall.html">
+                                    <a href="/Anmeldelser/Titanfall.html">
                                         <h3 id="GameTitleNyeAnd"><b>Titanfall</b></h3>
                                     </a>
                                     <p id="AndDesc"> Oprettet 30 April 2020</p>
@@ -228,12 +228,12 @@
                         <table id="Seperator" width="100%">
                             <tr>
                                 <td width="23%">
-                                    <a href="/Andmeldelser/gtav.html">
+                                    <a href="/Anmeldelser/gtav.html">
                                         <img src="../Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" height="23%" />
                                     </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
-                                    <a href="/Andmeldelser/gtav.html">
+                                    <a href="/Anmeldelser/gtav.html">
                                         <h3 id="GameTitleNyeAnd"><b>Grand Theft Auto V</b></h3>
                                     </a>
                                     <p id="AndDesc"> Oprettet 26 Januar 2020</p>
@@ -244,12 +244,12 @@
                         <table width="100%">
                             <tr>
                                 <td width="23%">
-                                    <a href="/Andmeldelser/Halo4.html">
+                                    <a href="/Anmeldelser/Halo4.html">
                                         <img src="../Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" height="23%" />
                                     </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
-                                    <a href="/Andmeldelser/Halo4.html">
+                                    <a href="/Anmeldelser/Halo4.html">
                                         <h3 id="GameTitleNyeAnd"><b>Halo 4</b></h3>
                                     </a>
                                     <p id="AndDesc"> Oprettet 23 December 2019</p>
@@ -260,12 +260,12 @@
                         <table id="Seperator" width="100%">
                             <tr>
                                 <td width="23%">
-                                    <a href="/Andmeldelser/Thombraider2013.html">
+                                    <a href="/Anmeldelser/Thombraider2013.html">
                                         <img src="../Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" height="23%" />
                                     </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
-                                    <a href="/Andmeldelser/Thombraider2013.html">
+                                    <a href="/Anmeldelser/Thombraider2013.html">
                                         <h3 id="GameTitleNyeAnd"><b>Thomb Raider 2013</b></h3>
                                     </a>
                                     <p id="AndDesc"> Oprettet 17 Januar 2015</p>
