--- a/GameChanger Projekt - El Ti/wwwroot/Kontakt.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Kontakt.html
@@ -95,7 +95,7 @@
                 <tr>
                     <th></th>
                     <th>
-                        <button id="KontaktButton" class="AquaButton">
+                        <button id="KontaktButton" class="AquaButton" style="width: 10%">
                             Send
                         </button>
                     </th>
