--- a/GameChanger Projekt - El Ti/wwwroot/Kontakt.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Kontakt.html
@@ -41,7 +41,7 @@
         <div class="topnav" style="text-align: center">
             <a href="http://localhost:55716/">Forside</a>
             <a href="Spil.html">Spil</a>
-            <a href="Kontakt.html">Kontakt</a>
+            <a href="Kontakt.html" id="active">Kontakt</a>
         </div>
 
 
