--- a/GameChanger Projekt - El Ti/wwwroot/Spil.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Spil.html
@@ -289,7 +289,7 @@
 
         <div class="topnav" style="text-align: center">
             <a href="http://localhost:55716/">Forside</a>
-            <a href="Spil.html">Spil</a>
+            <a href="Spil.html" id="active">Spil</a>
             <a href="Kontakt.html">Kontakt</a>
         </div>
 
