--- a/GameChanger Projekt - El Ti/wwwroot/Anmeldelser/Titanfall.html
+++ b/GameChanger Projekt - El Ti/wwwroot/Anmeldelser/Titanfall.html
@@ -98,7 +98,7 @@
                             <tr>
                                 <td width="23%">
                                     <a href="Forza4.html">
-                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" height="23%" />
+                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" height="23%" width="75px"/>
                                     </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
@@ -113,7 +113,7 @@
                             <tr>
                                 <td width="23%">
                                     <a href="SplinterCellBlacklist.html">
-                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" height="23%" />
+                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" height="23%" width="75px"/>
                                     </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
@@ -128,7 +128,7 @@
                             <tr>
                                 <td width="23%">
                                     <a href="Titanfall.html">
-                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" height="23%" />
+                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" height="23%" width="75px"/>
                                     </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
@@ -143,7 +143,7 @@
                             <tr>
                                 <td width="23%">
                                     <a href="gtav.html">
-                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" height="23%" />
+                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" height="23%" width="75px"/>
                                     </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
@@ -158,7 +158,7 @@
                             <tr>
                                 <td width="23%">
                                     <a href="Halo4.html">
-                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" height="23%" />
+                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" height="23%" width="75px"/>
                                     </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
@@ -173,7 +173,7 @@
                             <tr>
                                 <td width="23%">
                                     <a href="Thombraider2013.html">
-                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" height="23%" />
+                                        <img src="../Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" height="23%" width="75px"/>
                                     </a>
                                 </td>
                                 <td style="padding-right: 0%; padding-left: 0%; padding-bottom: 0%">
